<resources>
    <string name="app_name">TheMovieDB</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recycler_movie_image">recycler_movie_image</string>
    <string name="detail_backdrop_image">detail backdrop image</string>
    <string name="detail_movie_poster_image">detail movie poster image</string>
    <string name="activity_detail_poster_image">activity_detail_poster_image</string>
    <string name="overview">OVERVIEW</string>
    <string name="budget_k">budget: $---k</string>
    <string name="runtime_mins">runtime: ---mins</string>
    <string name="read_more">read more</string>
    <string name="review">REVIEW</string>
    <string name="reviews">REVIEWS</string>
    <string name="cast">CAST</string>
    <string name="trailer_poster">trailer_poster</string>
    <string name="play_image">play_image</string>
    <string name="trailers">TRAILERS</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>


    <string name="pref_cache_data" translatable="false">Enable caching</string>
    <string name="pref_cache_data_key" translatable="false">cache_data</string>
    <string name="pref_cache_data_summary_on" translatable="false">Enabled</string>
    <string name="pref_cache_data_summary_off" translatable="false">Disabled</string>


    <string name="pref_night_mode" translatable="false">Enable night mode</string>
    <string name="pref_night_mode_key" translatable="false">night_mode</string>
    <string name="pref_night_mode_summary_on" translatable="false">Enabled</string>
    <string name="pref_night_mode_summary_off" translatable="false">Disabled</string>
    <string name="favourite">Favourites</string>
    <string name="wikipedia">Wikipedia</string>
    <string name="imdb">IMDB</string>
    <string name="find_out_more">FIND OUT MORE</string>
    <string name="see_similar_movies">See similar movies</string>
    <string name="crew">CREW</string>
    <string name="search_hint">Search a movie</string>

    <string name="no_results">No results 😓</string>
    <string name="no_favorites">No favorites</string>

    <string name="pref_region_label">Choose regions</string>
    <string name="pref_region_label_all">All</string>
    <string name="pref_region_label_india">India</string>
    <string name="pref_region_label_uk">UK</string>
    <string name="pref_region_label_us">USA</string>
    <string name="pref_region_label_canada">Canada</string>
    <string name="pref_region_label_italy">Italy</string>

    <string name="pref_region_key" translatable="false">region</string>
    <string name="pref_region_all_value" translatable="false">all</string>
    <string name="pref_region_india_value" translatable="false">IN</string>
    <string name="pref_region_uk_value" translatable="false">UK</string>
    <string name="pref_region_US_value" translatable="false">US</string>
    <string name="pref_region_canada_value" translatable="false">CA</string>
    <string name="pref_region_italy_value" translatable="false">IT</string>
    <string name="general">General</string>


</resources>
