<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <CheckBoxPreference
        android:textAppearance="@font/open_sans_regular"
        android:defaultValue="@bool/pref_cache_data_default_value"
        android:key="@string/pref_cache_data_key"
        android:summaryOff="@string/pref_cache_data_summary_off"
        android:summaryOn="@string/pref_cache_data_summary_on"
        android:title="@string/pref_cache_data"/>

    <CheckBoxPreference
        android:textAppearance="@font/open_sans_regular"
        android:defaultValue="@bool/pref_night_mode_default_value"
        android:key="@string/pref_night_mode_key"
        android:summaryOff="@string/pref_night_mode_summary_off"
        android:summaryOn="@string/pref_night_mode_summary_on"
        android:title="@string/pref_night_mode"/>

    <MultiSelectListPreference
        android:defaultValue="@array/pref_region_default"
        android:key="@string/pref_region_key"
        android:entries="@array/pref_region_options_label"
        android:entryValues="@array/pref_region_options_values"
        android:title="@string/pref_region_label"/>

</PreferenceScreen>